tests/diagnostics/cases/types/07_binary_expr_type_mismatch.home
// Type mismatch inside a binary expression: int + string.
fn main() {
    let n: i32 = 10
    let s: string = "hi"
    let x: i32 = n + s
}
